<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_menu" translatable="false">description_post_menu</string>
    <string name="description_post_author_avatar" translatable="false">description_post_author_avatar</string>
    <string name="likes" translatable="false">likes</string>
    <string name="share" translatable="false">share</string>
    <string name="visibility" translatable="false">visibility</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post text</string>
    <string name="description_post_like">Like</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="edit_message">Edit Message</string>
    <string name="editImage" translatable="false" />
    <string name="closeEditButton" translatable="false" />
    <string name="chooser_share_post" translatable="false">Share post</string>
    <string name="description_post_save">Save</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="connection_lost" translatable="false">connection is lost. please try again later</string>
</resources>