<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/toolsTop"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/card_post" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/toolsTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="content,save" />

    <EditText
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/post_text"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMessageTextContent" />

    <ImageButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_like"
        app:layout_constraintBottom_toBottomOf="@id/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/content"
        app:layout_constraintTop_toTopOf="@+id/content"
        app:srcCompat="@drawable/save" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupForEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="editImage, editMessageTextContent, editMessage, cancel_button" />

    <ImageView
        android:id="@+id/editImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/closeEdit"
        app:layout_constraintBottom_toTopOf="@id/content"
        app:layout_constraintEnd_toStartOf="@id/editMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolsTop"
        app:srcCompat="@drawable/baseline_edit_24" />

    <ImageButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/closeEdit"
        app:layout_constraintBottom_toTopOf="@id/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/editMessage"
        app:layout_constraintTop_toTopOf="@id/toolsTop"
        app:srcCompat="@drawable/baseline_clear_24" />

    <TextView
        android:id="@+id/editMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/edit_message"
        app:layout_constraintEnd_toStartOf="@id/cancel_button"
        app:layout_constraintStart_toEndOf="@id/editImage"
        app:layout_constraintTop_toTopOf="@id/toolsTop"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/editMessageTextContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/content"
        app:layout_constraintEnd_toEndOf="@id/editMessage"
        app:layout_constraintStart_toStartOf="@id/editMessage"
        app:layout_constraintTop_toBottomOf="@id/editMessage" />





</androidx.constraintlayout.widget.ConstraintLayout>
